# fusion-installer-rs

./: .gitignore  .releaserc.json  CHANGELOG.md  Cargo.toml  README.md  flake.nix
.github/workflows/: release.yml
scripts/: bump-version.sh
src/: cli.rs  downloader.rs  error.rs  fusion.rs  main.rs  utils.rs
